fixed cropped elements on sankey

--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -8,6 +8,7 @@ $content-max-width: 1040px;
 $anchor-list-max-width: calc(100% / 3);
 $max-width-grid: 1280px;
 $nav-padding: 16px;
+$sankey-x-padding: 16px;
 
 $padding-wrap-mobile: 24px;
 $padding-wrap-tablet: 80px;
